[package]
name = "fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
wasm-smith = "0.8.0"

[dependencies.parity-wasm]
git = "https://github.com/paritytech/parity-wasm.git"
features = ["multi_value", "sign_ext"]

[dependencies.wasm-ast]
path = "../wasm-ast"

[dependencies.codegen-luajit]
path = "../codegen-luajit"

[dependencies.codegen-luau]
path = "../codegen-luau"

[[bin]]
name = "luajit_translate"
path = "fuzz_targets/luajit_translate.rs"
test = false
doc = false

[[bin]]
name = "luau_translate"
path = "fuzz_targets/luau_translate.rs"
test = false
doc = false
