[package]
name = "dev-test"
version = "0.11.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.0"
wasm-smith = "0.11.0"
wasm-ast = { path = "../wasm-ast" }
codegen-luajit = { path = "../codegen/luajit" }
codegen-luau = { path = "../codegen/luau" }

[dev-dependencies]
test-generator = "0.3.0"
wast = "42.0.0"

[[bin]]
name = "luajit_translate"
path = "fuzz_targets/luajit_translate.rs"
test = false
doc = false

[[bin]]
name = "luau_translate"
path = "fuzz_targets/luau_translate.rs"
test = false
doc = false
