[package]
name = "fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
wasm-smith = "0.8.0"

[dependencies.parity-wasm]
git = "https://github.com/paritytech/parity-wasm.git"
features = ["multi_value", "sign_ext"]

[dependencies.wasm]
path = "../wasm"

[[bin]]
name = "full_translate"
path = "fuzz_targets/full_translate.rs"
test = false
doc = false

[[bin]]
name = "just_writer"
path = "fuzz_targets/just_writer.rs"
test = false
doc = false

[[bin]]
name = "just_transformer"
path = "fuzz_targets/just_transformer.rs"
test = false
doc = false
