[package]
name = "wasm-synth"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.parity-wasm]
git = "https://github.com/paritytech/parity-wasm.git"
features = ["multi_value", "sign_ext"]

[dependencies.codegen-luajit]
path = "../codegen-luajit"

[dependencies.codegen-luau]
path = "../codegen-luau"
